--- a/happy teachers day.html
+++ b/happy teachers day.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="teachersday.css">
+    <link rel="stylesheet" href="styles/teachersday.css">
     <link href="https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -18,9 +18,9 @@
                 Happy Teacher's Day sir Jehu!!
             </div>
         </div>
-        <audio id= "sound-effect" src="Children Yay   Sound Effect.mp3"></audio>
-        <audio id= "background-audio" src="Five nights at Freddys  theme Orchestral Cover.mp3" loop></audio>
+        <audio id= "sound-effect" src="others/Children Yay   Sound Effect.mp3"></audio>
+        <audio id= "background-audio" src="others/Five nights at Freddys  theme Orchestral Cover.mp3" loop></audio>
     </div>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
